Attempt to use custom Jekyll theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
-theme: jekyll-theme-tactile
-
 title: The Kygek Foundation
 description: Improving lives, restoring humanity
+
+plugins:
+  - jekyll-remote-theme
+
+remote_theme: aksakalli/jekyll-doc-theme
