--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: The Kygek Foundation
 description: Improving lives, restoring humanity
-baseurl: /web
+baseurl: "/web/"
 
 plugins:
   - jekyll-remote-theme
