--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: The Kygek Foundation
-description: Improving lives, restoring humanity
+description: A non-profit organization launched on 2023 by KygekDev
 
 plugins:
   - jekyll-remote-theme
